src/np222kk/dv507/a2/test/cases/negative/test_if_03.ofp
void main() {
    char c = 'c';
    if (c) {
        print("Test");
    }
}